src/app/components/results/results.component.scss
// Copyright 2021 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.

.flex-container {
  display: flex;
  flex-flow: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  text-align: left;
}

.item-container {
  text-align: left;
  font-size: 70%;
  padding-bottom: 0.5em;
  padding-left: 1em;
  padding-right: 3em;
  margin: 0.4em;
  word-wrap: break-word;

}

.open-vm-button {
  margin-left: -25px;
}

.result-button {
  margin-left: -2em;
}

.old-results {
  margin-left: 5em;
}

